--- a/andi/match1.html
+++ b/andi/match1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Imma 100 - Match 1 (A vs B)</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="budi/style.css" />
   </head>
   <body class="dark-mode">
     <div class="container">
@@ -54,6 +54,6 @@
 
       <div id="message-board"><p id="message"></p></div>
     </div>
-    <script src="script_match1.js"></script>
+    <script src="budi/script_match1.js"></script>
   </body>
 </html>
