--- a/andi/match2.html
+++ b/andi/match2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Imma 100 - Match 2 (C vs D)</title>
-    <link rel="stylesheet" href="budi/style.css" />
+    <link rel="stylesheet" href="../budi/style.css" />
   </head>
   <body class="dark-mode">
     <div class="container">
@@ -50,6 +50,6 @@
 
       <div id="message-board"><p id="message"></p></div>
     </div>
-    <script src="budi/script_match2.js"></script>
+    <script src="../budi/script_match2.js"></script>
   </body>
 </html>
