--- a/register.html
+++ b/register.html
@@ -1,34 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-</body>
+  </head>
+  <body>
+    <div class="YANTO" style="justify-content: center; display: flex">
+      <buttonX style="width: 100px">
+        <a href="index.html" style="text-decoration: none; color: black">Balek</a>
+      </buttonX>
+    </div>
+
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus,
+      similique unde. Dicta harum perspiciatis alias consequatur quos id facere
+      error, quae quia repellat autem! Voluptatem incidunt dolorem aspernatur a
+      suscipit?
+    </p>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus,
+      similique unde. Dicta harum perspiciatis alias consequatur quos id facere
+      error, quae quia repellat autem! Voluptatem incidunt dolorem aspernatur a
+      suscipit?
+    </p>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus,
+      similique unde. Dicta harum perspiciatis alias consequatur quos id facere
+      error, quae quia repellat autem! Voluptatem incidunt dolorem aspernatur a
+      suscipit?
+    </p>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus,
+      similique unde. Dicta harum perspiciatis alias consequatur quos id facere
+      error, quae quia repellat autem! Voluptatem incidunt dolorem aspernatur a
+      suscipit?
+    </p>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus,
+      similique unde. Dicta harum perspiciatis alias consequatur quos id facere
+      error, quae quia repellat autem! Voluptatem incidunt dolorem aspernatur a
+      suscipit?
+    </p>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus,
+      similique unde. Dicta harum perspiciatis alias consequatur quos id facere
+      error, quae quia repellat autem! Voluptatem incidunt dolorem aspernatur a
+      suscipit?
+    </p>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus,
+      similique unde. Dicta harum perspiciatis alias consequatur quos id facere
+      error, quae quia repellat autem! Voluptatem incidunt dolorem aspernatur a
+      suscipit?
+    </p>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus,
+      similique unde. Dicta harum perspiciatis alias consequatur quos id facere
+      error, quae quia repellat autem! Voluptatem incidunt dolorem aspernatur a
+      suscipit?
+    </p>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus,
+      similique unde. Dicta harum perspiciatis alias consequatur quos id facere
+      error, quae quia repellat autem! Voluptatem incidunt dolorem aspernatur a
+      suscipit?
+    </p>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus,
+      similique unde. Dicta harum perspiciatis alias consequatur quos id facere
+      error, quae quia repellat autem! Voluptatem incidunt dolorem aspernatur a
+      suscipit?
+    </p>
+  </body>
 </html>
